Fixed center alignement

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -49,12 +49,13 @@ header {
 /* Home page */
 .home {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    > div {
+    > .a4 {
+        margin: 50px 0;
         width: 100%;
         display: flex;
         justify-content: space-evenly;
